TCCC-3786 Cost Report breakdown issue-URL too long
git-svn-id: https://coder.topcoder.com/tcs/clients/cronos/applications/direct/trunk@209992 fb370eea-3af6-4597-97f7-f7400a59c12a

--- a/src/web/css/dashboard.css
+++ b/src/web/css/dashboard.css
@@ -4603,6 +4603,10 @@ TABLE.pipelineStats TD {
     width: 10%;
 }
 
+#breakdownBody TABLE.pipelineStats TD {
+    width: auto;
+}
+
 TABLE.billingCostReport TD {
     font-size: 11px;
     text-align: center;
